upd: Updated webpack

--- a/app/public/about.html
+++ b/app/public/about.html
@@ -34,7 +34,8 @@
 	</div>
   </section>
 
-  <div class="box2">1</div>
+  <div class="box2"></div>
+  <p>lalal111</p>
 </main>
 <footer class="footer">
   <div class="container">
