feat: Added public/base.css

--- a/app/public/about.html
+++ b/app/public/about.html
@@ -3,43 +3,32 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport"
-		content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
+        content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Webpack Template About</title>
+  <link rel="icon" type="image/png" href="favicon.png">
+  <link rel="stylesheet" type="text/css" href="./base.css">
+  <title>About</title>
 </head>
-<body class="body">
-<header class="header">
-  <div class="container header__inner">
-	<h1 class="title-h1">About Page - native HTML</h1>
-	<p class="text">
-	  <a class="link" href="index.html">Home page</a>
-	</p>
+<body>
+
+<header>
+  <div class="container">
+    <h1>About page</h1>
   </div>
 </header>
-<main class="main">
-  <section class="section">
-	<div class="container">
-	  <div class="col-set-2">
-		<div class="card card--box-shadow">
-		  <div class="image-wrapper image--border-10">
-			<img class="image" src="./img/image2.jpg" alt="about image">
-		  </div>
-		</div>
-		<div class="card card--box-shadow">
-		  <div class="image-wrapper image--border-10">
-			<img class="image" src="./img/image.jpeg" alt="about image">
-		  </div>
-		</div>
-	  </div>
-	</div>
-  </section>
 
-  <div class="box2"></div>
-  <p>lalal11221</p>
-</main>
-<footer class="footer">
+<main>
   <div class="container">
-	<span class="text-center display-block">created by Victor Kasap</span>
+
+    <div id="app"></div>
+
+  </div>
+
+</main>
+
+<footer>
+  <div class="container">
+
   </div>
 </footer>
 
