--- a/app/public/index.html
+++ b/app/public/index.html
@@ -5,45 +5,32 @@
   <meta name="viewport"
         content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Public Index.html</title>
+  <link rel="icon" type="image/png" href="favicon.png">
+  <link rel="stylesheet" type="text/css" href="./base.css">
+  <title>Home</title>
 </head>
 <body>
 
 <header>
   <div class="container">
-    <h1 class="title-h1">Home page</h1>
-
-    <div class="box1">CSS</div>
-    <div class="box2">SCSS</div>
-    <p>
-      material-icons:account_circle <span class="material-icons">account_circle</span>
-    </p>
-    <p>
-      material-icons-outlined:account_circle <span class="material-icons-outlined">account_circle</span>
-    </p>
-    <p>
-      material-icons-outlined:info <span class="material-icons-outlined">info</span>
-    </p>
-    <p>
-      material-icons-two-tone:account_circle <span class="material-icons-two-tone">account_circle</span>
-    </p>
-    <p>
-      material-icons-two-tone:info <span class="material-icons-two-tone">info</span>
-    </p>
-
-    <div class="div"></div>
+    <h1>Home page</h1>
   </div>
 </header>
 
 <main>
   <div class="container">
-    <a href="about.html">About page</a>
-    <br> <br>
-    <div class="button-wrapper"></div>
+
+    <div id="app"></div>
+
   </div>
 
 </main>
-<footer></footer>
+
+<footer>
+  <div class="container">
+
+  </div>
+</footer>
 
 </body>
 </html>
