--- a/app/public/index.html
+++ b/app/public/index.html
@@ -5,8 +5,8 @@
   <meta name="viewport"
         content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <link rel="icon" type="image/png" href="favicon.png">
-  <link rel="stylesheet" type="text/css" href="./base.css">
+  <link rel="icon" type="image/png" href="img/favicon.png">
+  <link rel="stylesheet" type="text/css" href="./css/base.css">
   <title>Home</title>
 </head>
 <body>
@@ -28,7 +28,7 @@
 
 <footer>
   <div class="container">
-
+    <div id="footer-content"></div>
   </div>
 </footer>
 
