--- a/app/public/about.html
+++ b/app/public/about.html
@@ -20,7 +20,8 @@
 <main>
   <div class="container">
 
-    <div id="app"></div>
+    <div id="tabs"></div>
+    <div id="accordion"></div>
 
   </div>
 
